--- a/engineapp/index.html
+++ b/engineapp/index.html
@@ -13,19 +13,13 @@
                 <th>S&P</th>
                 <th>DJIA</th>
                 <th>Nasdaq</th>
-		    <th>VIX</th>
-                <th>BSE Sensex</th>
-                <th>FTSE 100</th>
-                <th>SPDR Gold Trust (ETF)</th>
+		<th>VIX</th>
               </tr>
               <tr>
                 <td><img src=http://www.google.com/finance/chart?q=INDEXSP:.INX&tlf=12 alt="Chart for S&P " title="S&P"/></td>
                 <td><img src=http://www.google.com/finance/chart?q=INDEXDJX:.DJI&tlf=12 alt="Chart for DJIA " title="DJIA"/></td>
                 <td><img src=http://www.google.com/finance/chart?q=INDEXNASDAQ:.IXIC&tlf=12 alt="Chart for Nasdaq " title="Nasdaq"/></td>
-		    <td><img src=http://www.google.com/finance/chart?q=INDEXCBOE:VIX&tlf=12 alt="VIX" title="VIX"/></td>
-                <td><img src=http://www.google.com/finance/chart?q=INDEXBOM:SENSEX&tlf=12 alt="Chart for BSE Sensex " title="BSE Sensex"/></td>
-                <td><img src=http://www.google.com/finance/chart?q=INDEXFTSE:UKX&tlf=12 alt="FTSE 100 " title="FTSE 100"/></td>
-                <td><img src=http://www.google.com/finance/chart?q=NYSEARCA:GLD&tlf=12 alt="Gold " title="SPDR Gold Trust (ETF)"/></td>
+		<td><img src=http://www.google.com/finance/chart?q=INDEXCBOE:VIX&tlf=12 alt="VIX" title="VIX"/></td>
               </tr>
             </table>
          
@@ -83,8 +77,21 @@
             <div align="center">
                 <input type="submit" value="Submit Ticker">
 
+            <br></br>
+            <br></br>
+            <table>
+              <tr>
+                <th>BSE Sensex</th>
+                <th>FTSE 100</th>
+                <th>SPDR Gold Trust (ETF)</th>
+              </tr>
+              <tr>
+                <td><img src=http://www.google.com/finance/chart?q=INDEXBOM:SENSEX&tlf=12 alt="Chart for BSE Sensex " title="BSE Sensex"/></td>
+                <td><img src=http://www.google.com/finance/chart?q=INDEXFTSE:UKX&tlf=12 alt="FTSE 100 " title="FTSE 100"/></td>
+                <td><img src=http://www.google.com/finance/chart?q=NYSEARCA:GLD&tlf=12 alt="Gold " title="SPDR Gold Trust (ETF)"/></td>
+              </tr>
+            </table>
             </div>
-           
 
          </form>
    </body>
